2012-04-09  Patrick Gansterer  <paroga@webkit.org>

        Remove HAVE_STDINT_H
        https://bugs.webkit.org/show_bug.cgi?id=83434

        Reviewed by Kentaro Hara.

        HAVE_STDINT_H is defined with 1 all the time and we us stdint.h without HAVE(STDINT_H) already.

        * config.h:
        * wtf/FastMalloc.cpp:
        * wtf/TCPageMap.h:
        * wtf/TCSpinLock.h:
        * wtf/TCSystemAlloc.cpp:

2012-04-06  Benjamin Poulain  <bpoulain@apple.com>

        Get rid of the useless flag PREEMPT_GEOLOCATION_PERMISSION
        https://bugs.webkit.org/show_bug.cgi?id=83325

        Reviewed by Ryosuke Niwa.

        * wtf/Platform.h: Remove the flag.

2012-04-06  Darin Adler  <darin@apple.com>

        Streamline strtod and fix some related problems
        https://bugs.webkit.org/show_bug.cgi?id=82857

        Reviewed by Geoffrey Garen.

        Replaced the strtod function template with a parseDouble function, eliminating
        the following unneeded features:

        - need for a trailing null character and a call to strlen
        - needless conversion of string lengths from size_t to int and back that created
          the possibility of incorrect truncation
        - one level of function call; use inlining instead
        - construction of the StringToDoubleConverter object; it was used to pass
          arguments that are known at compile time
        - most of the StringToDoubleConverter::StringToDouble function's body; it was
          code we did not need
        - parsing of Infinity and NaN at the strtod level; added recently when we moved
          from the old strtod to the new one, and not needed or helpful at this level
        - multiple copies of code to narrow to single byte strings; in many cases
          this was done even when starting with an LChar string that is already
          single-byte, now we handle this with an overload of parseDouble

        * wtf/dtoa.cpp: