@@ -193,9 +193,7 @@ SET(WTF_INCLUDE_DIRECTORIES
     "${CMAKE_BINARY_DIR}"
 )
 
-IF (USE_SYSTEM_MALLOC)
-    ADD_DEFINITIONS(-DUSE_SYSTEM_MALLOC=1)
-ELSE ()
+IF (NOT USE_SYSTEM_MALLOC)
     LIST(APPEND WTF_SOURCES
         TCSystemAlloc.cpp
     )
