@@ -68,5 +68,6 @@
 #cmakedefine01 ENABLE_WEB_TIMING
 #cmakedefine01 ENABLE_WORKERS
 #cmakedefine01 ENABLE_XSLT
+#cmakedefine01 USE_SYSTEM_MALLOC
 
 #endif /* CMAKECONFIG_H */
